--- a/angular-tour-of-heroes/package.json
+++ b/angular-tour-of-heroes/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -22,8 +23,11 @@
     "@angular/platform-browser-dynamic": "^14.1.0-next",
     "@angular/router": "^14.1.0-next",
     "angular-in-memory-web-api": "^0.14.0",
+    "express": "^4.18.1",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.7.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -33,6 +37,7 @@
     "@types/jasmine": "~4.0.0",
     "@types/node": "^16.11.35",
     "copyfiles": "^2.4.1",
+    "enhanced-resolve": "^3.4.1",
     "jasmine-core": "~4.1.0",
     "jasmine-marbles": "~0.9.2",
     "jasmine-spec-reporter": "~7.0.0",
